Add guests#update
