# config/routes.rb
@@ -5,6 +5,7 @@ Rails.application.routes.draw do
     mount Rswag::Api::Engine => '/api-docs'
 
     get '/guests/:invite_id', to: 'guests#show'
+    patch '/guests/:invite_id', to: 'guests#update'
 
     get '/health', to: 'health#index'
   end
